# Aptech-2026

./: .gitignore  Avarage of student marks.drawio  Check Leap Year.drawio  README.md  Sum of loop ( 0 .. 1000 )  a.out  leapyear  leapyear.c
Day_1/: Convert C to F.drawio
Term_1/BIIR/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind-nhom1.html
Term_1/BIIR/pretest3/: index.html  package.json  pnpm-lock.yaml
Term_1/BIIR/react-app1/: package.json  pnpm-lock.yaml
Term_1/BIIR/react-app2/: package.json  pnpm-lock.yaml
Term_1/BIIR/react-app3/: package.json  pnpm-lock.yaml
Term_1/BIIR/react-app4/: index.html  package.json  pnpm-lock.yaml
Term_1/BIIR/react-app5/: index.html  package.json  pnpm-lock.yaml  vite.config.js
Term_1/BIIR/tailwind_project/: README.md  index.html  package-lock.json  package.json
Term_1/DWD/: vs.txt
Term_1/DWD/Homework/: Version-2.html  Version1-complete.html  Version1.html  Version3.html  test-stub.js  version0.html
Term_1/DWD/day1/: s1_intro.html  s2_formatText.html  s2_link.html  s2_link2.html  s2_list.html  s2_path.html
Term_1/DWD/day10/: map.html
Term_1/DWD/day2/: s3_pseudoclass.html  s3_selector.html  s3_stylesheet.html
Term_1/DWD/day3/: s5_animation.html  s5_image.html  s5_mobile.html  (+5 more)
Term_1/FPC/: CMakeLists.txt  squash.sh
Term_1/FPC/Day_1_Basic_of_C/: a.out  helloworld  helloworld.cpp
Term_1/FPC/Day_1_Basic_of_C/leapyear.dSYM/Contents/Resources/DWARF/: leapyear
Term_1/FPC/Day_1_Basic_of_C/leapyear.dSYM/Contents/Resources/Relocations/aarch64/: leapyear.yml
Term_1/FPC/Day_2_Operator_Expression/: add_three_number.cpp  d02_bitwise.cpp  d02_cast.cpp  d02_inc.cpp  evaluate_area_perimeter_rectangle.cpp  evaluate_net_salary.cpp  evaluate_the_expression.cpp  evaluate_volumne_cylinder.cpp
Term_1/FPC/Day_2_Operator_Expression_Lab/: calculating_simple_interest.cpp  precendence_of_operators.cpp  tryityourself_1.cpp  tryityourself_2.cpp  tryityourself_3.cpp  tryityourself_4.cpp  tryityourself_5.cpp  using_arithmetic_operators.cpp  using_comparison_logiccal_operators.cpp  using_type_conversion.cpp
Term_1/FPC/Day_2_Variables_and_Datatypes/: area_and_perimeter_of_a_circle.cpp  calculate_square_of_number.cpp  d02_var  d02_var-executable  d02_var.cpp  display_salary_age.cpp
Term_1/FPC/Day_3_Condition_Lab/: exercise_1.cpp  exercise_2.cpp  exercise_3.cpp
Term_1/FPC/Day_3_Input_Output/: if_mark.cpp  if_mark_2.cpp  if_number.cpp  printf.cpp  printf2.cpp  scanf.cpp  switch_case  switch_case.cpp
Term_1/FPC/Day_4_Array/: array.cpp  bubblesort.cpp  homework.cpp  string.cpp  string2.cpp
Term_1/FPC/Day_4_Loop/: factorial.cpp  for.cpp  for_for.cpp  tryityourself_1.cpp  tryityourself_2.cpp  tryityourself_3.cpp  tryityourself_4.cpp  tryityourself_5.cpp  while.cpp
Term_1/FPC/Day_4_Loop_Lab/: find_factorial.cpp  tryityourself2.cpp  tryityourself3.cpp
Term_1/FPC/Day_5_Pointer/: pointer.cpp
Term_1/FPC/Day_6_Function/: function_demo.cpp  function_demo_2.cpp  function_demo_3.cpp
Term_1/FPC/Day_7_Struct/: struct.cpp  struct_arr.cpp
Term_1/FPC/Day_8_Present/: example.txt  ftell  ftell.cpp
Term_1/FPC/exam/: FTS00080.cpp
Term_1/FPC/exam_preparation/: compile_all.sh  quick_test  quick_test.cpp  test_all.sh
Term_1/FPC/exam_preparation/1. Co ban/: chuyen_doi_ngoai_te  chuyen_doi_ngoai_te.cpp  chuyen_doi_nhiet_do  chuyen_doi_nhiet_do.cpp  dien_tich_mat_lap_phuong  dien_tich_mat_lap_phuong.cpp  dien_tich_mat_tru  dien_tich_mat_tru.cpp  hoan_doi_2_so  hoan_doi_2_so.cpp  in_ma_ascii  in_ma_ascii.cpp  the_tich_lap_phuong  the_tich_lap_phuong.cpp  the_tich_tru  the_tich_tru.cpp
Term_1/FPC/exam_preparation/2. Dieu kien/: dien_tich_tam_giac  dien_tich_tam_giac.cpp  doi_chu_thuong_hoa  doi_chu_thuong_hoa.cpp  kiem_tra_so_chinh_phuong  kiem_tra_so_chinh_phuong.cpp  kiem_tra_tam_giac  kiem_tra_tam_giac.cpp  kiem_tra_tam_giac_vuong  kiem_tra_tam_giac_vuong.cpp  phuong_trinh_bac_2  phuong_trinh_bac_2.cpp  so_lon_nho_nhat  so_lon_nho_nhat.cpp  so_ngay_toi_da  so_ngay_toi_da.cpp
Term_1/FPC/exam_preparation/3. Vong lap/: 10_bo_so_pithagore  10_bo_so_pithagore.cpp  10_so_chinh_phuong  10_so_chinh_phuong.cpp  10_so_nguyen_to  10_so_nguyen_to.cpp  bang_cuu_chuong  bang_cuu_chuong.cpp  giai_thua  giai_thua.cpp  giai_thua_cach  giai_thua_cach.cpp  kiem_tra_so_hoan_hao  kiem_tra_so_hoan_hao.cpp  kiem_tra_so_nguyen_to  kiem_tra_so_nguyen_to.cpp
Term_1/FPC/exam_preparation/4. Mang/: dem_boi_so  dem_boi_so.cpp  dem_so_chan  dem_so_chan.cpp  dem_so_lan_xuat_hien  dem_so_lan_xuat_hien.cpp  dem_uoc_so  dem_uoc_so.cpp  dem_uoc_so_co_dau  dem_uoc_so_co_dau.cpp  dem_uoc_so_le  dem_uoc_so_le.cpp  kiem_tra_mang_chan  kiem_tra_mang_chan.cpp  max_min_binh_quan  max_min_binh_quan.cpp  sap_xep_giam_dan  sap_xep_giam_dan.cpp  sap_xep_tang_dan  sap_xep_tang_dan.cpp
Term_1/FPC/pretest/: pretest2.cpp  pretest3.cpp  pretest4.cpp
drawio-flowchart/: Check Leap Year.drawio
(+110 files in other folders)
